kubernetes/base/ddi-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ddi
  labels:
    app: ddi
    component: api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: ddi
    component: api
